--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+
+<html>
+<head>
+<title>Title</title>
+</head>
+
+<body>
+    <h1>This is a simple page</h1>
+    <h2>with different tags</h2>
+</body>
+
+</html>
